--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.22.1'
+    compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
