--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".activities.MyScheduleActivity"
@@ -87,8 +89,8 @@
             android:name=".activities.managepic.SelectPic"
             android:label="활동사진 추가" />
         <activity android:name=".activities.managepic.UpdatePic"></activity>
-        <activity android:name=".profile_modified" />
-        <activity android:name=".profile_see" />
+        <activity android:name=".activities.profile_modified" />
+        <activity android:name=".activities.profile_see" />
     </application>
 
 </manifest>
